test/bad/ex1.cb
def foo(x: int) -> int {
        loop {
            if true {
                break 3;
            } else {
                break true;
            }
        }
}
